--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends 'tom_common/base.html' %}
+<!-- {% extends 'tom_common/base.html' %}
 {% block content %}
 <p>
 To know that we know what we know, and to know that we do not know
@@ -10,4 +10,4 @@ what we do not know, that is true knowledge. <br/>
   <li>{{ target.name }}</li>
   {% endfor %}
 </ul>
-{% endblock %}
+{% endblock %} -->
