--- a/templates/tom_targets/target_detail.html
+++ b/templates/tom_targets/target_detail.html
@@ -66,7 +66,7 @@
   <div class="col-md-8">
     <ul class="nav nav-tabs" role="tablist" id="tabs">
       <li class="nav-item">
-        <a class="nav-link active" id="observe-tab" href="#observe" role="tab" data-toggle="tab">Observe</a>
+        <a class="nav-link" id="observe-tab" href="#observe" role="tab" data-toggle="tab">Observe</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="observations-tab" href="#observations" role="tab" data-toggle="tab">Observations</a>
@@ -81,12 +81,12 @@
         <a class="nav-link" id="photometry-tab" href="#photometry" role="tab" data-toggle="tab">Photometry</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="spectroscopy-tab" href="#spectroscopy" role="tab" data-toggle="tab">Spectroscopy</a>
+        <a class="nav-link active" id="spectroscopy-tab" href="#spectroscopy" role="tab" data-toggle="tab">Spectroscopy</a>
       </li>
       
     </ul>
     <div class="tab-content">
-      <div class="tab-pane active" id="observe">
+      <div class="tab-pane" id="observe">
         <h4>Observe</h4>
         {% observing_buttons object %}
         <hr/>
@@ -124,7 +124,7 @@
         {% photometry_for_target object %}
         {% get_photometry_data object %}
       </div>
-      <div class="tab-pane" id="spectroscopy">
+      <div class="tab-pane active" id="spectroscopy">
         {% spectroscopy_for_target object %}
       </div>
       
