--- a/templates/tom_targets/target_detail.html
+++ b/templates/tom_targets/target_detail.html
@@ -1,5 +1,5 @@
 {% extends 'tom_common/base.html' %}
-{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras static cache classification_extras %}
+{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras static cache classification_extras tides_targets_extras  %}
 {% block title %}Target {{ object.name }}{% endblock %}
 {% block additional_css %}
 <link rel="stylesheet" href="{% static 'tom_targets/css/main.css' %}">
@@ -43,7 +43,7 @@
       {% endif %}
       {% target_unknown_statuses object %}
       {% target_buttons object %}
-      {% target_data object %}
+      {% tides_target_data object %}
       <h3>Classifications</h3>
       <ul>
         <li><strong>Auto Classification:</strong></li>
