--- a/templates/tom_targets/target_detail.html
+++ b/templates/tom_targets/target_detail.html
@@ -1,5 +1,5 @@
 {% extends 'tom_common/base.html' %}
-{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras static cache %}
+{% load comments bootstrap4 tom_common_extras targets_extras observation_extras dataproduct_extras static cache myplots_tags %}
 {% block title %}Target {{ object.name }}{% endblock %}
 {% block additional_css %}
 <link rel="stylesheet" href="{% static 'tom_targets/css/main.css' %}">
@@ -33,6 +33,49 @@
   });   
 
 </script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+      setTimeout(() => {  // Delay execution to ensure Plotly is loaded
+          const plotDiv = document.querySelector("#spectroscopyPlot .js-plotly-plot");
+          console.log("PlotDiv:", plotDiv); // Debugging
+
+          const lines = {
+              "HbetaCheckbox": { x: 4862.68, color: "blue" },
+              "OIIIrCheckbox": { x: 5008.24, color: "red" },
+              "OIIIbCheckbox": { x: 4960.30, color: "black" }
+          };
+
+          Object.keys(lines).forEach(id => {
+              document.getElementById(id).addEventListener("change", function() {
+                  Plotly.relayout(plotDiv, { shapes: [] }).then(() => {
+                      let newShapes = [];
+                      Object.keys(lines).forEach(lineId => {
+                          if (document.getElementById(lineId).checked) {
+                              newShapes.push({
+                                  type: "line",
+                                  x0: lines[lineId].x,
+                                  x1: lines[lineId].x,
+                                  y0: 0,
+                                  y1: 1,
+                                  xref: "x",
+                                  yref: "paper",
+                                  line: { color: lines[lineId].color, width: 1 }
+                              });
+                          }
+                      });
+                      console.log("New Shapes:", newShapes); // Debugging
+                      Plotly.relayout(plotDiv, { shapes: newShapes });
+                  });
+              });
+          });
+      }, 1000); // Delay ensures the plot is fully loaded
+  });
+</script>
+
+
+
+
 <div class="row">
   <div class="col-md-3">
     <div id="target-info">
@@ -112,14 +155,28 @@
         {% get_photometry_data object %}
         </div>
       <div class="tab-pane active" id="spectroscopy">
-        {% spectroscopy_for_target target %}
+        {% target_spectroscopy target %}
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="spectralLineCheckbox">
-        <label class="form-check-label" for="spectralLineCheckbox">
-          Spectral line
+        <input class="form-check-input" type="checkbox" id="HbetaCheckbox">
+        <label class="form-check-label" for="HbetaCheckbox" style="color: blue;">
+          Hβ (4862.68 Å)
         </label>
       </div>
+      
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="OIIIrCheckbox">
+        <label class="form-check-label" for="OIIIrCheckbox" style="color: red;">
+          [OIII]r (5008.24 Å)
+        </label>
+      </div>
+      
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="OIIIbCheckbox">
+        <label class="form-check-label" for="OIIIbCheckbox" style="color: black;">
+          [OIII]b (4960.30 Å)
+        </label>
+      </div>      
       {% comments_enabled as comments_are_enabled %}
       <hr/>
       <h5>Comments</h5>
