Added redshift slider

--- a/static/tom_common/css/custom.css
+++ b/static/tom_common/css/custom.css
@@ -41,6 +41,12 @@ a:hover {
     margin: 0 auto;   /* Centers the container */
 }
 
+.checkbox-container {
+    display: grid;
+    grid-template-columns: repeat(5, auto); /* Two checkboxes per row */
+    gap: 1px; /* Spacing between checkboxes */
+  }
+  
 /* Override padding for content class */
 /* body .content {
     padding: -2rem -2rem !important;  /* Remove padding */
