--- a/templates/tom_targets/target_detail.html
+++ b/templates/tom_targets/target_detail.html
@@ -32,7 +32,20 @@ document.addEventListener("DOMContentLoaded", function () {
 
     const lines = {
         "HydrogenCheckbox": { x: [4102.9351, 4341.69, 4862.68, 6564.61], color: "blue" },
-        "OIIICheckbox": { x: [4960.30, 5008.24], color: "red" }
+        "HeliumCheckbox1": { x: [4923.305, 5017.0765, 5877.243, 6679.99], color: "darkgreen" },
+        "HeliumCheckbox2": { x: [5413.030], color: "olive" },
+        "NitrogenCheckbox2": { x: [5756.24, 6549.86, 6585.27], color: "deepskyblue"},
+        "OICheckbox": { x: [6302.046, 6365.536], color: "crimson"},
+        "OIICheckbox": {x: [3727.092, 3729.875, 7320.121, 7330.755], color: "darkred"},
+        "OIIICheckbox": { x: [4364.44, 4960.30, 5008.24], color: "red" },
+        "SIICheckbox": { x: [4069.749, 6718.29, 6732.68], color: "goldenrod"},
+        "SIIICheckbox": { x: [6313.8, 9071.1, 9533.2], color: "orange"},
+        "NeIIICheckbox": {x: [3869.81], color: "lawngreen"},
+        "ArIIICheckbox": {x: [7137.8, 7753.2], color: "hotpink"},
+        "CICheckbox": {x: [9824.13, 9850.260], color: "grey"},
+        "CIICheckbox": {x: [1334.532, 1335.708, 2323.5, 2324.69, 7236.42], color: "saddlebrown"},
+        "CIIICheckbox": {x: [977.03, 1908.734, 4647.420, 4650.250, 4651.470, 5695.920], color: "brown"},
+        "CIVCheckbox": {x: [1548.187, 1550.772, 5801.330, 5811.980], color: "black"}
     };
 
     function updateLines(z) {
@@ -163,18 +176,20 @@ document.addEventListener("DOMContentLoaded", function () {
       <!-- Checkboxes -->
       <div class="checkbox-container spectroscopy-only">
         <label><input type="checkbox" id="HydrogenCheckbox"> <span style="color: blue;">H</span></label>
-        <label><input type="checkbox" id="OIIICheckbox"> <span style="color: red;">[O III]</span></label>                     
-        <label><input type="checkbox" id="CustomLineCheckbox1"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
+        <label><input type="checkbox" id="HeliumCheckbox1"> <span style="color: darkgreen;">He I</span></label>
+        <label><input type="checkbox" id="HeliumCheckbox2"> <span style="color:olive">He II</span></label>
+        <label><input type="checkbox" id="CICheckbox"> <span style="color:grey">C I</span></label>
+        <label><input type="checkbox" id="CIICheckbox"> <span style="color:saddlebrown">C II</span></label>
+        <label><input type="checkbox" id="CIIICheckbox"> <span style="color:brown">C III</span></label>
+        <label><input type="checkbox" id="CIVCheckbox"> <span style="color:black">C IV</span></label>
+        <label><input type="checkbox" id="NitrogenCheckbox2"> <span style="color:deepskyblue">N II</span></label>
+        <label><input type="checkbox" id="OICheckbox"> <span style="color:firebrick">O I</span></label>
+        <label><input type="checkbox" id="OIICheckbox"> <span style="color:darkred">O II</span></label>
+        <label><input type="checkbox" id="OIIICheckbox"> <span style="color: red;">O III</span></label>                     
+        <label><input type="checkbox" id="SIICheckbox"> <span style="color:goldenrod;">S II</span></label>                     
+        <label><input type="checkbox" id="SIIICheckbox"> <span style="color:orange;">S III</span></label>                     
+        <label><input type="checkbox" id="NeIIICheckbox"> <span style="color:lawngreen;">Ne III</span></label>                     
+        <label><input type="checkbox" id="ArIIICheckbox"> <span style="color:hotpink;">Ar III</span></label>                     
         <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
 
       </div>
