--- a/templates/tom_targets/target_detail.html
+++ b/templates/tom_targets/target_detail.html
@@ -32,20 +32,23 @@ document.addEventListener("DOMContentLoaded", function () {
 
     const lines = {
         "HydrogenCheckbox": { x: [4102.9351, 4341.69, 4862.68, 6564.61], color: "blue" },
-        "HeliumCheckbox1": { x: [4923.305, 5017.0765, 5877.243, 6679.99], color: "darkgreen" },
-        "HeliumCheckbox2": { x: [5413.030], color: "olive" },
-        "NitrogenCheckbox2": { x: [5756.24, 6549.86, 6585.27], color: "deepskyblue"},
-        "OICheckbox": { x: [6302.046, 6365.536], color: "crimson"},
-        "OIICheckbox": {x: [3727.092, 3729.875, 7320.121, 7330.755], color: "darkred"},
+        "HeliumCheckbox2": { x: [4685.710], color: "olive" },
+        "NitrogenCheckbox2": { x: [6549.86, 6585.27], color: "deepskyblue"},
+        "OICheckbox": { x: [6302.046], color: "crimson"},
+        "OIICheckbox": {x: [3727.092, 3729.875], color: "darkred"},
         "OIIICheckbox": { x: [4364.44, 4960.30, 5008.24], color: "red" },
-        "SIICheckbox": { x: [4069.749, 6718.29, 6732.68], color: "goldenrod"},
-        "SIIICheckbox": { x: [6313.8, 9071.1, 9533.2], color: "orange"},
+        "SIICheckbox": { x: [6718.29, 6732.68], color: "goldenrod"},
         "NeIIICheckbox": {x: [3869.81], color: "lawngreen"},
-        "ArIIICheckbox": {x: [7137.8, 7753.2], color: "hotpink"},
-        "CICheckbox": {x: [9824.13, 9850.260], color: "grey"},
-        "CIICheckbox": {x: [1334.532, 1335.708, 2323.5, 2324.69, 7236.42], color: "saddlebrown"},
-        "CIIICheckbox": {x: [977.03, 1908.734, 4647.420, 4650.250, 4651.470, 5695.920], color: "brown"},
-        "CIVCheckbox": {x: [1548.187, 1550.772, 5801.330, 5811.980], color: "black"}
+        "CIIICheckbox": {x: [1908.734], color: "brown"},
+        "CIVCheckbox": {x: [1548.187, 1550.772], color: "black"},
+        
+        "CHCheckboxAbs": {x: [4300.00], color: "rgb(31, 31, 43)"},
+        "CICheckboxAbs": {x: [9061.44, 9088.51, 9111.80], color: "brown"},
+        "CIICheckboxAbs": {x: [6578.05, 6582.88], color: "black"},
+        "NaICheckboxAbs": {x: [5889.95, 5895.92], color: "darkorange"},
+        "MgICheckboxAbs": {x: [5167.33, 5172.68, 5183.60], color: "gray"},
+        "CaIICheckboxAbs": {x: [3933.66, 3968.47], color: "purple"},
+
     };
 
     function updateLines(z) {
@@ -175,25 +178,36 @@ document.addEventListener("DOMContentLoaded", function () {
       </div>
       <!-- Checkboxes -->
       <div class="checkbox-container spectroscopy-only">
-        <label><input type="checkbox" id="HydrogenCheckbox"> <span style="color: blue;">H</span></label>
-        <label><input type="checkbox" id="HeliumCheckbox1"> <span style="color: darkgreen;">He I</span></label>
-        <label><input type="checkbox" id="HeliumCheckbox2"> <span style="color:olive">He II</span></label>
-        <label><input type="checkbox" id="CICheckbox"> <span style="color:grey">C I</span></label>
-        <label><input type="checkbox" id="CIICheckbox"> <span style="color:saddlebrown">C II</span></label>
-        <label><input type="checkbox" id="CIIICheckbox"> <span style="color:brown">C III</span></label>
-        <label><input type="checkbox" id="CIVCheckbox"> <span style="color:black">C IV</span></label>
-        <label><input type="checkbox" id="NitrogenCheckbox2"> <span style="color:deepskyblue">N II</span></label>
-        <label><input type="checkbox" id="OICheckbox"> <span style="color:firebrick">O I</span></label>
-        <label><input type="checkbox" id="OIICheckbox"> <span style="color:darkred">O II</span></label>
-        <label><input type="checkbox" id="OIIICheckbox"> <span style="color: red;">O III</span></label>                     
-        <label><input type="checkbox" id="SIICheckbox"> <span style="color:goldenrod;">S II</span></label>                     
-        <label><input type="checkbox" id="SIIICheckbox"> <span style="color:orange;">S III</span></label>                     
-        <label><input type="checkbox" id="NeIIICheckbox"> <span style="color:lawngreen;">Ne III</span></label>                     
-        <label><input type="checkbox" id="ArIIICheckbox"> <span style="color:hotpink;">Ar III</span></label>                     
-        <label><input type="checkbox" id="CustomLineCheckbox2"> Test Line</label>
-
-      </div>
-
+        <div class="checkbox-group">
+            <h5>Emission Lines</h5>
+            <div class="checkbox-grid">
+                <label><input type="checkbox" id="HydrogenCheckbox"> <span style="color: blue;">H</span></label>
+                <label><input type="checkbox" id="HeliumCheckbox2"> <span style="color:olive">He II</span></label>
+                <label><input type="checkbox" id="CIIICheckbox"> <span style="color:brown">C III</span></label>
+                <label><input type="checkbox" id="CIVCheckbox"> <span style="color:black">C IV</span></label>
+                <label><input type="checkbox" id="NitrogenCheckbox2"> <span style="color:deepskyblue">N II</span></label>
+                <label><input type="checkbox" id="OICheckbox"> <span style="color:firebrick">O I</span></label>
+                <label><input type="checkbox" id="OIICheckbox"> <span style="color:darkred">O II</span></label>
+                <label><input type="checkbox" id="OIIICheckbox"> <span style="color: red;">O III</span></label>
+                <label><input type="checkbox" id="NeIIICheckbox"> <span style="color:lawngreen;">Ne III</span></label>
+                <label><input type="checkbox" id="SIICheckbox"> <span style="color:goldenrod;">S II</span></label>
+            </div>
+        </div>
+    
+        <div class="checkbox-group">
+            <h5>Absorption Lines</h5>
+            <div class="checkbox-grid">
+              <label><input type="checkbox" id="CHCheckboxAbs"> <span style="color:rgb(31, 31, 43)">CH</span></label>
+              <label><input type="checkbox" id="CICheckboxAbs"> <span style="color:brown">C I</span></label>
+              <label><input type="checkbox" id="CIICheckboxAbs"> <span style="color:black">C II</span></label>
+              <label><input type="checkbox" id="NaICheckboxAbs"> <span style="color:darkorange">Na I</span></label>
+              <label><input type="checkbox" id="MgICheckboxAbs"> <span style="color: gray">Mg I</span></label>
+              <label><input type="checkbox" id="CaIICheckboxAbs"> <span style="color:purple">Ca II</span></label>
+            </div>
+        </div>
+    </div>
+    
+      
       
       {% comments_enabled as comments_are_enabled %}
       <hr/>
