HTML Formatting Tweaks
* Improvements to the HTML formatting in a number of files

--- a/custom_code/templates/custom_code/partials/aladin_finderchart.html
+++ b/custom_code/templates/custom_code/partials/aladin_finderchart.html
@@ -1,7 +1,9 @@
 <!-- include Aladin Lite CSS file in the head section of your page -->
 <link rel="stylesheet" href="//aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css" />
 <!-- insert this snippet where you want Aladin Lite viewer to appear and after the loading of jQuery -->
-<h3>Survey View</h3>
+<label for="aladin-lite-div" style="display:block; width:250px;">
+  <h3>Survey View</h3>
+</label>
 <div id="aladin-lite-div" style="width:300px;height:300px;"></div>
 <div id="chart-form-div" style="width:300px;">
   <form id="chart-form">
